Modify birthday greeting and audio playback
Updated birthday message and audio functionality.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Hey you 💞</span><br>
-                    <span class="say">Happy Birthday 🎈</span><br>
-                    <span class="say">May God bless you 🍀</span><br>
+                    <span class="say">Hey Kumkum 💞</span><br>
+                    <span class="say">Happy Birthday 🎈🎂</span><br>
+                    <span class="say">May God bless you!🍀</span><br>
                     <span class="say">And give u many happiness 💕</span><br>
                     <span class="say">Just saying... you're pretty awesome ❤️</span><br>
                     <span class="say">Sending good vibes and maybe a wink 😏</span><br>
@@ -180,4 +180,5 @@
     })();
     </script>
 </body>
+
 </html>
