Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="text">
                 <div id="code">
                     <span class="say">Hey Kumkum 💞</span><br>
-                    <span class="say">Happy Birthday 🎈🎂</span><br>
+                    <span class="say">Happy Birthday Bestuu🎈🎂</span><br>
                     <span class="say">May God bless you!🍀</span><br>
                     <span class="say">And give u many happiness 💕</span><br>
                     <span class="say">Just saying... you're pretty awesome ❤️</span><br>
@@ -182,3 +182,4 @@
 </body>
 
 </html>
+
