Fix HTML encoding and add photo box

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                     <span class="say">Hope u have a great day today ❤️😘</span><br>
                 </div>
             </div>
+			<div id="photo-box">
+    <img src="WhatsApp Image 2025-12-28 at 01.02.14.jpeg" alt="memory">
+</div>
+
             <div id="clock-box">
                 <span id="clock">577 days 0 hours 0 minutes 0 seconds</span> <!-- Change to "6940 days..." if needed -->
             </div>
@@ -182,4 +186,5 @@
 </body>
 
 </html>
+
 
