Fix HTML encoding and add CSS styles

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
             audio.play();
         }
     </script>
+	<style>
+#photo-box {
+    text-align: center;
+    margin: 20px 0 10px 0;
+    position: relative;
+    z-index: 10;
+}
+
+#photo-box img {
+    max-width: 220px;
+    border-radius: 14px;
+    box-shadow: 0 0 18px rgba(255, 105, 180, 0.7);
+}
+</style>
+
 </head>
 <body>
     <div id="main">
@@ -186,5 +201,6 @@
 </body>
 
 </html>
+
 
 
