--- a/index.html
+++ b/index.html
@@ -21,18 +21,23 @@
     </script>
 	<style>
 #photo-box {
+    width: 100%;
     text-align: center;
-    margin: 20px 0 10px 0;
+    margin: 15px 0;
     position: relative;
-    z-index: 10;
+    z-index: 5;
 }
 
 #photo-box img {
-    max-width: 220px;
+    max-height: 260px;      /* 🔑 KEY LINE */
+    width: auto;
+    max-width: 180px;
+    object-fit: cover;
     border-radius: 14px;
-    box-shadow: 0 0 18px rgba(255, 105, 180, 0.7);
+    box-shadow: 0 0 15px rgba(255, 105, 180, 0.6);
 }
 </style>
+
 
 </head>
 <body>
@@ -201,6 +206,7 @@
 </body>
 
 </html>
+
 
 
 
